KRACOEUS-1885 : create 'siteDeploy' profile to see if it's working