@@ -7,6 +7,78 @@
 	<name>KCRA Project</name>
 	<version>1.0.1-SNAPSHOT</version>
 	<url>http://kuali.org</url>
+	
+	<organization>
+    <name>Kuali Coeus</name>
+    <url> http://kra.testdrive.kuali.org/kra-ptd</url>
+<!--<logo>https://test,kuali.org/kra-ptd/images-portal/logo-kra.gif</logo> -->
+  	</organization>
+
+	<developers>
+	    <developer>
+	      <id>td</id>
+	      <name>Terry Durkin</name>
+	      <email>td@kuali.org</email>
+	      <!--<url>http://eric.propellors.net</url> -->
+	      <organization>Kuali Coeus</organization>
+	      <organizationUrl>http://kuali.org</organizationUrl>
+	      <roles>
+	        <role>DM</role>
+	        <role>developer</role>
+	      </roles>
+	      <timezone>-5</timezone>
+	      <!--<properties>
+	        <picUrl>http://tinyurl.com/prv4t</picUrl>
+	      </properties> -->
+	    </developer>
+	        <developer>
+	          <id>bh</id>
+	          <name>Brian Hutchinson</name>
+	          <email>bh@kuali.org</email>
+	          <!--<url>http://eric.propellors.net</url> -->
+	          <organization>Kuali Coeus</organization>
+	          <organizationUrl>http://kuali.org</organizationUrl>
+	          <roles>
+	            <role>DM</role>
+	            <role>developer</role>
+	          </roles>
+	          <timezone>-5</timezone>
+	          <!--<properties>
+	            <picUrl>http://tinyurl.com/prv4t</picUrl>
+	          </properties> -->
+	        </developer>
+	
+	  </developers>
+	
+	<licenses>
+	  <license>
+	    <name>Kuali Coeus</name>
+	    <url>https://test.kuali.org/licenses/LICENSE-1.0.txt</url>
+	    <distribution>repo</distribution>
+	    <comments>Kuali Coeus license</comments>
+	  </license>
+	</licenses>
+	<issueManagement>
+	    <system>Jira</system>
+	    <url>https://test.kuali.org/jira/</url>
+	  </issueManagement>
+	
+	<ciManagement>
+	    <system>continuum</system>
+	    <url>https://test.kuali.org/continuum</url>
+	    <notifiers>
+	      <notifier>
+	        <type>mail</type>
+	        <sendOnError>true</sendOnError>
+	        <sendOnFailure>true</sendOnFailure>
+	        <sendOnSuccess>true</sendOnSuccess>
+	        <sendOnWarning>true</sendOnWarning>
+	        <configuration><address>continuum@127.0.0.1</address></configuration>
+	      </notifier>
+	    </notifiers>
+	  </ciManagement>
+	
+	
 	<profiles>
 		<profile>
 			<id>war</id>
@@ -446,6 +518,33 @@
 				</dependency>
 			</dependencies>
 		</profile>
+		
+                <profile>
+                        <id>siteDeploy</id>
+                        <activation>
+                                <activeByDefault>false</activeByDefault>
+                        </activation>
+                        <build>
+                                <plugins>
+                                        <plugin>
+                                                <artifactId>maven-surefire-plugin</artifactId>
+                                                <version>2.3.1</version>
+                                                <configuration>
+                                                        <useFile>false</useFile>
+                                                        <testFailureIgnore>true</testFailureIgnore>
+                                                        <includes>
+                                                                <include>**/*Test.java</include>
+                                                        </includes>
+                                                        <excludes><exclude></exclude></excludes>
+                                                        <forkMode>once</forkMode>
+                                                        <reportFormat>plain</reportFormat>
+                                                        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                                                </configuration>
+                                        </plugin>
+                                  </plugins>
+                           </build>
+               </profile>
+ 		
 	</profiles>
 	<repositories>
 		<repository>
@@ -474,6 +573,17 @@
 				<groupId>org.codehaus.mojo</groupId>
         		<artifactId>cobertura-maven-plugin</artifactId>
         	</plugin>
+      <!--   	
+	      <plugin>
+	        <groupId>net.sourceforge.maven-taglib</groupId>
+	        <artifactId>maven-taglib-plugin</artifactId>
+	      </plugin>
+			<plugin> 
+				<groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-javadoc-plugin</artifactId>
+				 <version>2.4</version>
+			 </plugin> 
+      -->  	
 		</plugins>
 	</reporting>
 	<scm>
@@ -482,4 +592,14 @@
     	<tag>HEAD</tag>
     	<url>https://test.kuali.org/fisheye/browse/kc_project</url>
   	</scm>
+  	
+	<distributionManagement>
+	  <site>
+	    <id>wsa131</id>
+	    <name>CI and Site deployment Server</name>
+	    <!--<url>scp://wsa129.uits.indiana.edu/tmp/site</url>-->
+	    <url>file:///opt/kra/site</url>
+	  </site>
+	</distributionManagement>
+  	
 </project>
